Bug 262680 - kmail crash when handling brocken vcf files
Summary: kmail crash when handling brocken vcf files
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: 4.6
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-09 19:05 UTC by marian.trenkwalder
Modified: 2011-04-08 07:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a broken vcf (8.03 KB, application/octet-stream)
2011-04-07 13:48 UTC, marian.trenkwalder
Details

Note You need to log in before you can comment on or make changes to this bug.
Description marian.trenkwalder 2011-01-09 19:05:16 UTC
Application: kontact (4.6 beta3)
KDE Platform Version: 4.5.95 (4.6 RC2)
Qt Version: 4.7.0
Operating System: Linux 2.6.37-CHAKRA x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

with a mail I got a (broken?) vcf file. I click on it then the Vcard Viewer pop up. if I click there on "Next Card" Kmail craches.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f663207b760 (LWP 4020))]

Thread 2 (Thread 0x7f661a258710 (LWP 4021)):
#0  0x00007f662a3b540c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f662ea40574 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib/libQtWebKit.so.4
#2  0x00007f662ea405a9 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/libQtWebKit.so.4
#3  0x00007f662a3b0cb0 in start_thread () from /lib/libpthread.so.0
#4  0x00007f662f5899fd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f663207b760 (LWP 4020)):
[KCrash Handler]
#6  0x00007f661331fc2c in ?? () from /usr/lib/libmessageviewer.so.4
#7  0x00007f661331fd94 in ?? () from /usr/lib/libmessageviewer.so.4
#8  0x00007f662fca6bff in QMetaObject::activate (sender=0x1c2f600, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3280
#9  0x00007f6631389550 in KDialog::slotButtonClicked(int) () from /usr/lib/libkdeui.so.5
#10 0x00007f6631389a32 in KDialog::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#11 0x00007f661331fd38 in ?? () from /usr/lib/libmessageviewer.so.4
#12 0x00007f662fca6bff in QMetaObject::activate (sender=0x1c1ea60, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffa49701e0) at kernel/qobject.cpp:3280
#13 0x00007f662fcaad3e in QSignalMapper::mapped (this=<value optimized out>, _t1=8192) at .moc/debug-shared/moc_qsignalmapper.cpp:101
#14 0x00007f662fcaaf65 in QSignalMapper::map (this=0x1c1ea60, sender=0x133a250) at kernel/qsignalmapper.cpp:266
#15 0x00007f662fcab6b0 in QSignalMapper::qt_metacall (this=0x1c1ea60, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffa4970350) at .moc/debug-shared/moc_qsignalmapper.cpp:87
#16 0x00007f662fca6bff in QMetaObject::activate (sender=0x133a250, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffa4970350) at kernel/qobject.cpp:3280
#17 0x00007f6630d47fe2 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/debug-shared/moc_qabstractbutton.cpp:206
#18 0x00007f6630a4421b in QAbstractButtonPrivate::emitClicked (this=<value optimized out>) at widgets/qabstractbutton.cpp:546
#19 0x00007f6630a458db in QAbstractButtonPrivate::click (this=0x1e39230) at widgets/qabstractbutton.cpp:539
#20 0x00007f6630a45b4c in QAbstractButton::mouseReleaseEvent (this=0x133a250, e=0x7fffa4970e50) at widgets/qabstractbutton.cpp:1121
#21 0x00007f66306bd144 in QWidget::event (this=0x133a250, event=0x7fffa4970e50) at kernel/qwidget.cpp:8187
#22 0x00007f66306642f4 in QApplicationPrivate::notify_helper (this=0xd04ea0, receiver=0x133a250, e=0x7fffa4970e50) at kernel/qapplication.cpp:4397
#23 0x00007f663066a038 in QApplication::notify (this=<value optimized out>, receiver=0x133a250, e=0x7fffa4970e50) at kernel/qapplication.cpp:3960
#24 0x00007f663142e596 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#25 0x00007f662fc8f4ec in QCoreApplication::notifyInternal (this=0x7fffa49719b0, receiver=0x133a250, event=0x7fffa4970e50) at kernel/qcoreapplication.cpp:732
#26 0x00007f663066572b in QCoreApplication::sendEvent (receiver=0x133a250, event=0x7fffa4970e50, alienWidget=0x133a250, nativeWidget=0x1c2f600, buttonDown=0x7f66311d9078, lastMouseReceiver=..., 
    spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#27 QApplicationPrivate::sendMouseEvent (receiver=0x133a250, event=0x7fffa4970e50, alienWidget=0x133a250, nativeWidget=0x1c2f600, buttonDown=0x7f66311d9078, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:3059
#28 0x00007f66306ec9f8 in QETWidget::translateMouseEvent (this=0x1c2f600, event=<value optimized out>) at kernel/qapplication_x11.cpp:4403
#29 0x00007f66306eb0b9 in QApplication::x11ProcessEvent (this=0x7fffa49719b0, event=0x7fffa4971600) at kernel/qapplication_x11.cpp:3536
#30 0x00007f6630713d02 in x11EventSourceDispatch (s=0xd021b0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#31 0x00007f6629e82bf3 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0x00007f6629e833d0 in ?? () from /usr/lib/libglib-2.0.so.0
#33 0x00007f6629e8366d in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#34 0x00007f662fcbd72f in QEventDispatcherGlib::processEvents (this=0xcaefa0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#35 0x00007f663071399e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007f662fc8df82 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007f662fc8e1cc in QEventLoop::exec (this=0x7fffa4971900, flags=...) at kernel/qeventloop.cpp:201
#38 0x00007f662fc9371b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#39 0x0000000000404067 in main (argc=1, argv=0x7fffa4971f98) at /home/manutortosa/desktop-testing/kdepim-beta/src/kdepim-4.6beta3/kontact/src/main.cpp:217

Possible duplicates by query: bug 260924, bug 259381, bug 257884, bug 253609, bug 253264.

Reported using DrKonqi
Comment 1 Christophe Marin 2011-01-10 12:19:37 UTC
>#6  0x00007f661331fc2c in ?? () from /usr/lib/libmessageviewer.so.4
>#7  0x00007f661331fd94 in ?? () from /usr/lib/libmessageviewer.so.4

The interesting parts are missing. Can you reproduce this crash every time ?

If so, it would be useful to install the debug packages for kdepim (or build it in debug mode)
Comment 2 marian.trenkwalder 2011-01-10 16:25:47 UTC
now I installed kdepim-common-debug and reproduced the bug

Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fa68ce6b760 (LWP 3826))]

Thread 2 (Thread 0x7fa675048710 (LWP 3827)):
#0  0x00007fa6851a540c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fa689830574 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib/libQtWebKit.so.4
#2  0x00007fa6898305a9 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/libQtWebKit.so.4
#3  0x00007fa6851a0cb0 in start_thread () from /lib/libpthread.so.0
#4  0x00007fa68a3799fd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fa68ce6b760 (LWP 3826)):
[KCrash Handler]
#6  MessageViewer::VCardViewer::slotUser2 (this=0x27e8780) at /home/manutortosa/desktop-testing/kdepim-beta/src/kdepim-4.6beta3/messageviewer/vcardviewer.cpp:96
#7  0x00007fa66e120d94 in MessageViewer::VCardViewer::qt_metacall (this=0x27e8780, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /home/manutortosa/desktop-testing/kdepim-beta/src/kdepim-4.6beta3/messageviewer/vcardviewer.moc:76
#8  0x00007fa68aa96bff in QMetaObject::activate (sender=0x27e8780, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3280
#9  0x00007fa68c179550 in KDialog::slotButtonClicked(int) () from /usr/lib/libkdeui.so.5
#10 0x00007fa68c179a32 in KDialog::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#11 0x00007fa66e120d38 in MessageViewer::VCardViewer::qt_metacall (this=0x27e8780, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /home/manutortosa/desktop-testing/kdepim-beta/src/kdepim-4.6beta3/messageviewer/vcardviewer.moc:70
#12 0x00007fa68aa96bff in QMetaObject::activate (sender=0x27e7290, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff0f895b20) at kernel/qobject.cpp:3280
#13 0x00007fa68aa9ad3e in QSignalMapper::mapped (this=<value optimized out>, _t1=8192) at .moc/debug-shared/moc_qsignalmapper.cpp:101
#14 0x00007fa68aa9af65 in QSignalMapper::map (this=0x27e7290, sender=0x2727ea0) at kernel/qsignalmapper.cpp:266
#15 0x00007fa68aa9b6b0 in QSignalMapper::qt_metacall (this=0x27e7290, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fff0f895c90) at .moc/debug-shared/moc_qsignalmapper.cpp:87
#16 0x00007fa68aa96bff in QMetaObject::activate (sender=0x2727ea0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff0f895c90) at kernel/qobject.cpp:3280
#17 0x00007fa68bb37fe2 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/debug-shared/moc_qabstractbutton.cpp:206
#18 0x00007fa68b83421b in QAbstractButtonPrivate::emitClicked (this=<value optimized out>) at widgets/qabstractbutton.cpp:546
#19 0x00007fa68b8358db in QAbstractButtonPrivate::click (this=0x1a75290) at widgets/qabstractbutton.cpp:539
#20 0x00007fa68b835b4c in QAbstractButton::mouseReleaseEvent (this=0x2727ea0, e=0x7fff0f896790) at widgets/qabstractbutton.cpp:1121
#21 0x00007fa68b4ad144 in QWidget::event (this=0x2727ea0, event=0x7fff0f896790) at kernel/qwidget.cpp:8187
#22 0x00007fa68b4542f4 in QApplicationPrivate::notify_helper (this=0x15f6fe0, receiver=0x2727ea0, e=0x7fff0f896790) at kernel/qapplication.cpp:4397
#23 0x00007fa68b45a038 in QApplication::notify (this=<value optimized out>, receiver=0x2727ea0, e=0x7fff0f896790) at kernel/qapplication.cpp:3960
#24 0x00007fa68c21e596 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#25 0x00007fa68aa7f4ec in QCoreApplication::notifyInternal (this=0x7fff0f8972f0, receiver=0x2727ea0, event=0x7fff0f896790) at kernel/qcoreapplication.cpp:732
#26 0x00007fa68b45572b in QCoreApplication::sendEvent (receiver=0x2727ea0, event=0x7fff0f896790, alienWidget=0x2727ea0, nativeWidget=0x27e8780, buttonDown=0x7fa68bfc9078, lastMouseReceiver=..., 
    spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#27 QApplicationPrivate::sendMouseEvent (receiver=0x2727ea0, event=0x7fff0f896790, alienWidget=0x2727ea0, nativeWidget=0x27e8780, buttonDown=0x7fa68bfc9078, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:3059
#28 0x00007fa68b4dc9f8 in QETWidget::translateMouseEvent (this=0x27e8780, event=<value optimized out>) at kernel/qapplication_x11.cpp:4403
#29 0x00007fa68b4db0b9 in QApplication::x11ProcessEvent (this=0x7fff0f8972f0, event=0x7fff0f896f40) at kernel/qapplication_x11.cpp:3536
#30 0x00007fa68b503d02 in x11EventSourceDispatch (s=0x15f42b0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#31 0x00007fa684c72bf3 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0x00007fa684c733d0 in ?? () from /usr/lib/libglib-2.0.so.0
#33 0x00007fa684c7366d in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#34 0x00007fa68aaad72f in QEventDispatcherGlib::processEvents (this=0x15a0fa0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#35 0x00007fa68b50399e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007fa68aa7df82 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007fa68aa7e1cc in QEventLoop::exec (this=0x7fff0f897240, flags=...) at kernel/qeventloop.cpp:201
#38 0x00007fa68aa8371b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#39 0x0000000000404067 in main (argc=1, argv=0x7fff0f8978d8) at /home/manutortosa/desktop-testing/kdepim-beta/src/kdepim-4.6beta3/kontact/src/main.cpp:217
Comment 3 Christophe Marin 2011-01-10 17:38:24 UTC
hm, let's reassign this one to kdepim/messageviewer instead.
Comment 4 Torgny Nyblom 2011-01-10 19:59:18 UTC
Could you please attach or mail me one of these faulty files?
Comment 5 marian.trenkwalder 2011-01-10 20:05:32 UTC
On Monday 10 January 2011 19:59:19 Torgny Nyblom wrote:
> https://bugs.kde.org/show_bug.cgi?id=262680
> --- Comment #4 from Torgny Nyblom <kde nyblom org>  2011-01-10 19:59:18 ---
> Could you please attach or mail me one of these faulty files?

please be carefully with my private data.
Comment 6 Torgny Nyblom 2011-01-10 20:19:09 UTC
Feel free to replace any private data with "x" or any other character as long as you keep the "error".
Comment 7 marian.trenkwalder 2011-01-23 15:21:04 UTC
I anonymized the file and keep the error

>https://bugs.kde.org/show_bug.cgi?id=262680
>--- Comment #6 from Torgny Nyblom <kde nyblom org>  2011-01-10 20:19:09 ---
>Feel free to replace any private data with "x" or any other character as long
>as you keep the "error".

>-- 
>Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
>------- You are receiving this mail because: -------
>You reported the bug.
Comment 8 Christophe Marin 2011-04-07 12:31:41 UTC
Looks like the broken and anonymized vcf never arrived. Can you attach it to this bug report please?
Comment 9 marian.trenkwalder 2011-04-07 13:48:52 UTC
Created attachment 58674 [details]
a broken vcf
Comment 10 Christophe Marin 2011-04-07 15:57:33 UTC
Thanks. Confirmed with the steps you mentioned.

Program received signal SIGSEGV, Segmentation fault.
0x00007fffee2dfa2e in QList<KABC::Addressee>::Node::t (this=0x8) at /usr/include/QtCore/qlist.h:110
110                                            ? v : this); }
(gdb) bt
#0  0x00007fffee2dfa2e in QList<KABC::Addressee>::Node::t (this=0x8) at /usr/include/QtCore/qlist.h:110
#1  0x00007fffee2df9d3 in QList<KABC::Addressee>::iterator::operator* (this=0xb6d288) at /usr/include/QtCore/qlist.h:180
#2  0x00007fffee340bc6 in MessageViewer::VCardViewer::slotUser2 (this=0xb6d240) at /kde/src/KDE/kdepim/messageviewer/vcardviewer.cpp:96
#3  0x00007fffee340de0 in MessageViewer::VCardViewer::qt_metacall (this=0xb6d240, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fffffff9d70) at /kde/build/KDE/kdepim/messageviewer/vcardviewer.moc:76
#4  0x00007ffff6919a5f in QMetaObject::activate (sender=0xb6d240, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3278
#5  0x00007ffff791e310 in KDialog::slotButtonClicked (this=0xb6d240, button=8192) at /usr/src/debug/kdelibs-4.6.41_20110406/kdeui/dialogs/kdialog.cpp:896
#6  0x00007ffff791e962 in KDialog::qt_metacall (this=0xb6d240, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0x7fffffff9f40) at /usr/src/debug/kdelibs-4.6.41_20110406/build/kdeui/kdialog.moc:190
#7  0x00007fffee340da1 in MessageViewer::VCardViewer::qt_metacall (this=0xb6d240, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0x7fffffff9f40) at /kde/build/KDE/kdepim/messageviewer/vcardviewer.moc:70
#8  0x00007ffff6919a5f in QMetaObject::activate (sender=0x1fda9d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffffff9f40) at kernel/qobject.cpp:3278
#9  0x00007ffff691e43e in QSignalMapper::mapped (this=<optimized out>, _t1=8192) at .moc/release-shared/moc_qsignalmapper.cpp:101
#10 0x00007ffff691e665 in QSignalMapper::map (this=0x1fda9d0, sender=0x1ccccf0) at kernel/qsignalmapper.cpp:266
#11 0x00007ffff691ed20 in QSignalMapper::qt_metacall (this=0x1fda9d0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffffffa0b0) at .moc/release-shared/moc_qsignalmapper.cpp:87
#12 0x00007ffff6919a5f in QMetaObject::activate (sender=0x1ccccf0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffffffa0b0) at kernel/qobject.cpp:3278
#13 0x00007ffff633a5a2 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#14 0x00007ffff6080f1b in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#15 0x00007ffff60824db in QAbstractButtonPrivate::click (this=0x1a59b90) at widgets/qabstractbutton.cpp:539
#16 0x00007ffff608274c in QAbstractButton::mouseReleaseEvent (this=0x1ccccf0, e=0x7fffffffaa30) at widgets/qabstractbutton.cpp:1121
#17 0x00007ffff5d1ec5c in QWidget::event (this=0x1ccccf0, event=0x7fffffffaa30) at kernel/qwidget.cpp:8259
#18 0x00007ffff5ccd144 in QApplicationPrivate::notify_helper (this=0x65e330, receiver=0x1ccccf0, e=0x7fffffffaa30) at kernel/qapplication.cpp:4462
#19 0x00007ffff5cd5f7c in QApplication::notify (this=<optimized out>, receiver=0x1ccccf0, e=0x7fffffffaa30) at kernel/qapplication.cpp:4023
#20 0x00007ffff79c2a76 in KApplication::notify (this=0x7fffffffb670, receiver=0x1ccccf0, event=0x7fffffffaa30) at /usr/src/debug/kdelibs-4.6.41_20110406/kdeui/kernel/kapplication.cpp:311
#21 0x00007ffff690547c in QCoreApplication::notifyInternal (this=0x7fffffffb670, receiver=0x1ccccf0, event=0x7fffffffaa30) at kernel/qcoreapplication.cpp:731
#22 0x00007ffff5cce155 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:215
#23 QApplicationPrivate::sendMouseEvent (receiver=0x1ccccf0, event=0x7fffffffaa30, alienWidget=0x1ccccf0, nativeWidget=0xb6d240, buttonDown=0x7ffff679f198, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#24 0x00007ffff5d4cb48 in QETWidget::translateMouseEvent (this=0xb6d240, event=<optimized out>) at kernel/qapplication_x11.cpp:4461
#25 0x00007ffff5d4b209 in QApplication::x11ProcessEvent (this=0x7fffffffb670, event=0x7fffffffb3a0) at kernel/qapplication_x11.cpp:3587
#26 0x00007ffff5d73904 in QEventDispatcherX11::processEvents (this=0x6117c0, flags=...) at kernel/qeventdispatcher_x11.cpp:132
#27 0x00007ffff69048d2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#28 0x00007ffff6904ae5 in QEventLoop::exec (this=0x7fffffffb530, flags=...) at kernel/qeventloop.cpp:201
#29 0x00007ffff6908f2b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#30 0x0000000000403474 in main (argc=2, argv=0x7fffffffb808) at /kde/src/KDE/kdepim/kmail/main.cpp:145
Comment 11 Sergio Martins 2011-04-07 20:52:52 UTC
Git commit 92bc39b080d13cdf0195802cf1058108c6614e20 by Sergio Martins.
Committed on 07/04/2011 at 21:57.
Pushed by smartins into branch 'master'.

Don't show next and previous buttons if the attendee list is empty.

Can happen with a broken vcf file.

BUG: 262680

M  +3    -2    messageviewer/vcardviewer.cpp     

http://commits.kde.org/kdepim/92bc39b080d13cdf0195802cf1058108c6614e20
Comment 12 Torgny Nyblom 2011-04-08 07:42:13 UTC
Git commit 90607b3d9a2d26e5f63eeb4c1a4f69718a322c68 by Torgny Nyblom. on behalf of Sergio Martins
Committed on 07/04/2011 at 21:57.
Pushed by tnyblom into branch '4.4'.

Don't show next and previous buttons if the attendee list is empty.

Can happen with a broken vcf file.

BUG: 262680

M  +6    -4    messageviewer/vcardviewer.cpp     

http://commits.kde.org/kdepim/90607b3d9a2d26e5f63eeb4c1a4f69718a322c68