Don't show next and previous buttons if the attendee list is empty.

Can happen with a broken vcf file.

BUG: 262680