messageviewer/vcardviewer.cpp
@@ -56,13 +56,15 @@ VCardViewer::VCardViewer(QWidget *parent, const QByteArray& vCard)
     if ( mAddresseeList.size() <= 1 ) {
       showButton(User2, false);
       showButton(User3, false);
-    }
-    else
+    } else {
       enableButton(User3, false);
-  }
-  else {
+    }
+  } else {
     mAddresseeView->setPlainText(i18n("Failed to parse vCard."));
+    mContactViewer->setRawContact(KABC::Addressee());
     enableButton(User1, false);
+    showButton(User2, false);
+    showButton(User3, false);
   }
   connect( this, SIGNAL( user1clicked() ), SLOT( slotUser1() ) );
   connect( this, SIGNAL( user2clicked() ), SLOT( slotUser2() ) );
